recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:6: error: reassignment to val
  if (steps=1){droite(angle:Double)
           ^